Gradle: Added main-class and jfx packages export/open